# php-tantivy

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: build.yml
crates/tantivy-core/: Cargo.toml
crates/tantivy-core/src/: lib.rs  query.rs  registry.rs  schema.rs  writer.rs
crates/tantivy-ext/: Cargo.toml
crates/tantivy-ext/src/: lib.rs
crates/tantivy-ffi/: Cargo.toml
crates/tantivy-ffi/src/: error.rs  ffi.rs  lib.rs
crates/tantivy-ffi/tests/: ffi_roundtrip.rs
docs/: BUILD.md
include/: tantivyphp.h
php/: composer.json  phpstan.neon  phpunit.xml
php/phpstan/: native-index.php
php/src/: Client.php  ClientInterface.php  ExtClient.php  FfiClient.php  IndexBusyException.php  TantivyException.php
php/tests/: ClientTest.php  bootstrap.php  smoke.php
